--- a/style.css
+++ b/style.css
@@ -10,7 +10,20 @@ body, html {
   * {
     box-sizing: border-box;
   }
-  
+  h1{
+      font-family: "Comic Sans MS", cursive, sans-serif;
+      font-size: 2.5rem;
+      letter-spacing: 2px;
+      word-spacing: 2px;
+      color: #ff0717e5;
+      font-weight: 700;
+      text-decoration: none;
+      font-style: italic;
+      font-variant: normal;
+      text-transform: none;
+      }
+
+
   .wrapper {
     background-color: rgb(0,0,0); /* Fallback color */
      background-color: rgba(0,0,0, 0.4);  
@@ -28,3 +41,6 @@ body, html {
     text-align: center;
     padding: 20px;
   }
+  .me {
+    border-radius: 100px;
+    opacity: 0.7;}
