--- a/style.css
+++ b/style.css
@@ -5,7 +5,10 @@ body, html {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    text-align: center;
   }
+
+
   
   * {
     box-sizing: border-box;
@@ -41,6 +44,68 @@ body, html {
     text-align: center;
     padding: 20px;
   }
+  
   .me {
     border-radius: 100px;
     opacity: 0.7;}
+
+   #slideshow {
+    overflow: hidden;
+    height: 510px;
+    width: 728px;
+    margin: 0 auto;
+    }
+     
+  .slide {
+    float: left;
+    height: 510px;
+    width: 728px;
+    }
+     
+  .slide-wrapper {
+    width: calc(728px * 5); 
+    animation: slide 10s ease infinite;
+    }
+     
+  .slide:nth-child(1) {
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0, 0.4);  
+    }
+     
+  .slide:nth-child(2) {
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0, 0.4);
+    }
+     
+  .slide:nth-child(3) {
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0, 0.4);
+    }
+     
+  .slide:nth-child(4) {
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0, 0.4);
+    }
+
+    .slide:nth-child(5) {
+      background-color: rgb(0,0,0); /* Fallback color */
+      background-color: rgba(0,0,0, 0.4);
+    }
+    
+    @keyframes slide {
+      20% {
+        margin-left: 0px;
+      }
+     
+      40% {
+        margin-left: calc(-728px * 1);
+      }
+     
+      60% {
+        margin-left: calc(-728px * 2);
+      }
+     
+      80% {
+        margin-left: calc(-728px * 3);
+      }
+    }
